<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="bottom"
    android:background="@drawable/img3">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_margin="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        android:gravity="end|bottom"
        android:text="@string/ze"
        android:padding="10dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/ac"
               android:textSize="30sp"
               android:layout_weight="1"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/bs"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/per"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/div"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>

       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/sev"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/eig"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/ni"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/mul"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fou"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fiv"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/si"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/sub"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>

       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/on"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/tw"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/th"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/add"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/ze"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/dot"
               android:textSize="30sp"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="0.70"
               android:text="@string/eq"
               android:textSize="30sp"
               android:layout_marginLeft="5dp"
               android:backgroundTint="@color/black"
               android:textColor="@color/gray"/>
       </LinearLayout>




   </LinearLayout>



</RelativeLayout>